Fixed result overflow bug

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,12 +5,15 @@
 
 ::-webkit-scrollbar {
     width: 10px;
+    display: none;
 }
 ::-webkit-scrollbar-track {
     background-color: transparent;
+    display: none;
 }
 ::-webkit-scrollbar-thumb {
     background: #2F3142;
+    display: none;
 }
 textarea:focus, input:focus{
     outline: none;
